# hls-gemm

./: README.md
part01_gemm_vitis/00_gemm_naive/: csynth.rpt  csynth_design_size.rpt  gemm.cpp  gemm.h  gemm_kernel_csynth.rpt
part01_gemm_vitis/01_inner_loop_pipelined/: csynth.rpt  csynth_design_size.rpt  gemm.cpp  gemm_kernel_csynth.rpt
part01_gemm_vitis/02_array_partition/: csynth.rpt  csynth_design_size.rpt  gemm.cpp  gemm_kernel_Pipeline_compute_middle_csynth.rpt  gemm_kernel_csynth.rpt
part01_gemm_vitis/03_block_tiled_gemm/: csynth.rpt  csynth_design_size.rpt  gemm.cpp  gemm_kernel_Pipeline_COMPUTE_BLOCK_VITIS_LOOP_57_3_csynth.rpt  gemm_kernel_Pipeline_LOAD_A_VITIS_LOOP_48_2_csynth.rpt  gemm_kernel_Pipeline_LOAD_B_VITIS_LOOP_36_1_csynth.rpt  gemm_kernel_Pipeline_WRITE_RESULT_VITIS_LOOP_70_4_csynth.rpt  gemm_kernel_csynth.rpt
part02_gemm_vivado/: drc_report.txt  power_report.txt  timing_report.txt  utilization_report.txt
part02_gemm_vivado/gemm_vivado.cache/wt/: synthesis.wdf  webtalk_pa.xml
part02_gemm_vivado/gemm_vivado.gen/sources_1/bd/gemm/ip/gemm_gemm_kernel_0_0/drivers/gemm_kernel_v1_0/src/: CMakeLists.txt  Makefile  xgemm_kernel.c  xgemm_kernel.h  xgemm_kernel_hw.h  xgemm_kernel_linux.c  xgemm_kernel_sinit.c
part02_gemm_vivado/gemm_vivado.runs/.jobs/: vrs_config_1.xml
part02_gemm_vivado/gemm_vivado.runs/gemm_axi_mem_intercon_1_imp_auto_pc_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gemm_axi_mem_intercon_1_imp_auto_pc_0.dcp  gemm_axi_mem_intercon_1_imp_auto_pc_0.tcl  (+9 more)
part03_gemm_fpga/: gemm.ipynb
part03_gemm_fpga/overlays/: gemm.tcl
(+400 files in other folders)
